# mizu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  ethereal.cpp  gol.cpp  gooey.cpp
example/icon/gol/: glider.aseprite
examples/: CMakeLists.txt  ethereal.cpp  gol.cpp  test_priority_queue.cpp
include/gloo/: buffer.hpp  context.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/gloo/sdl3/: attr.hpp  context_flags.hpp  gl_attr.hpp  gl_context_flags.hpp
include/mizu/: application.hpp  audio_mgr.hpp  batcher.hpp  callback_mgr.hpp  class_helpers.hpp  color.hpp  dear.hpp  engine.hpp  enum_class_bitops.hpp  enum_class_helpers.hpp  g2d.hpp  gl_context.hpp  id_mgr.hpp  image.hpp  imconfig.hpp  input_mgr.hpp  intermittent_lambda.hpp  io.hpp  is_any_of.hpp  log.hpp  memusage.hpp  mizu.hpp  module.hpp  payloads.hpp  rng.hpp  shapes.hpp  texture.hpp  time.hpp  types.hpp  window.hpp
include/mizu/core/: application.hpp  audio_mgr.hpp  batcher.hpp  callback_mgr.hpp  dear.hpp  engine.hpp  font.hpp  g2d.hpp  input_mgr.hpp  input_types.hpp  payloads.hpp  texture.hpp  window.hpp
include/mizu/ds/: priority_queue.hpp
include/mizu/font/: code_page_437.hpp  ft_font.hpp  ttf.hpp
include/mizu/gui/: control.hpp  gui.hpp  layout.hpp  node.hpp  types.hpp
include/mizu/util/: averagers.hpp  io.hpp  memusage.hpp  platform.hpp  rng.hpp  shapes.hpp  time.hpp
res/shader/: lines.frag  lines.vert  points.vert  tex.frag  tex.vert  tris.frag  tris.vert
src/gloo/: buffer.cpp  context.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/gloo/sdl3/: attr.cpp  context_flags.cpp  gl_attr.cpp  gl_context_flags.cpp
src/mizu/: application.cpp  audio_mgr.cpp  averagers.cpp  batcher.cpp  color.cpp  dear.cpp  engine.cpp  g2d.cpp  gl_context.cpp  id_mgr.cpp  image.cpp  input_mgr.cpp  io.cpp  memusage.cpp  platform.cpp  rng.cpp  texture.cpp  window.cpp
src/mizu/core/: application.cpp  audio_mgr.cpp  batcher.cpp  color.cpp  dear.cpp  engine.cpp  font.cpp  g2d.cpp  input_mgr.cpp  texture.cpp  window.cpp
src/mizu/font/: code_page_437.cpp  ft_font.cpp  ttf.cpp
src/mizu/gui/: control.cpp  gui.cpp  layout.cpp  node.cpp
src/mizu/util/: averagers.cpp  io.cpp  memusage.cpp  platform.cpp  rng.cpp
